<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vicki.bored.bored.MakeMeSleep"
    android:background="@color/black">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="315dp"
        android:layout_height="380dp"
        android:src="@drawable/hipno"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/hypnosis_spira"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="99dp"
        android:id="@+id/gifImageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hypnosis_head"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView2"
        tools:text="INSTRUCTIONS" />

    <ScrollView
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_spiral"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="542dp" />
    </ScrollView>
</android.support.constraint.ConstraintLayout>
